# neat-gpt

./: .gitignore  README.md  pyproject.toml  setup.py
neat_gpt/: __init__.py
neat_gpt/dataset/: books_corpus.py
neat_gpt/model/: __init__.py  block.py  decoder.py  gpt.py  mlp.py  multi_head_attention.py  utils.py
scripts/: train.py
scripts/dataset/: prepare.py  tokenize.py
scripts/model/: train.py
tests/: test_vanilla_gpt.py
vanilla_gpt/: __init__.py
vanilla_gpt/model/: block.py  decoder.py  gpt.py  layer.py  mlp.py  multi_head_attention.py  utils.py
