[tool.poetry]
name = "vanilla-gpt"
version = "0.1.0"
description = ""
authors = ["William Eliot <75908561+wjeliot@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.11.0+cu113"
black = "^22.6.0"
numpy = "^1.23.1"
rich = "^12.5.1"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu113"
secondary = true

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
