[tool.poetry]
name = "neat-gpt"
version = "0.1.0"
description = ""
authors = ["William Eliot <75908561+65536william@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.6.0"
numpy = "^1.23.1"
rich = "^12.5.1" 
torch = "^1.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
